--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "extension",
     "manager"
   ],
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
